--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 <img src="erro.png">
+<br/>
+<br/>
+<br/>
+<a href="https://github.com/DiogoMaMartins/404-Page"><input type="button" name="Return" value="return"></a>
 </body>
 </html>
