--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
   <meta charset="utf-8">
 </head>
 <body>
-<img src="erro.png">
-<br/>
-<br/>
-<br/>
+<div class="retornar">
 <a href="https://github.com/DiogoMaMartins/404-Page"><input type="button" name="Return" value="return"></a>
+</div>
+<img class="mao" src="mao.png"/>
+<img class="mao1" src="mao1.png"/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<img src="erro.png">
 </body>
 </html>
