--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
   <meta charset="utf-8">
 </head>
 <body>
+<img  class="azul" src="bolaAzul.png"/>
+<img  class="vermelha" src="bolavermelha.png"/>
+
+<img src="erro.png">
+<br/>
+
+ <img  class="pisca" src="seta.png"/>
+<br/>
+<br/>
 <div class="retornar">
 <a href="https://github.com/DiogoMaMartins/404-Page"><input type="button" name="Return" value="return"></a>
 </div>
-<img class="mao" src="mao.png"/>
-<img class="mao1" src="mao1.png"/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<img src="erro.png">
+
+<img  class="azul1" src="bolaAzul.png"/>
+<img  class="vermelha1" src="bolavermelha.png"/>
+
 </body>
 </html>
